...
        android:padding="10dp"
        android:textColorHint="@color/darkOrange"
        tools:ignore="autofill" />

    <EditText

        android:id="@+id/pass_field"
        android:animateLayoutChanges="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SignUpFrgmnt_email_field"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
...
        tools:counterEnabled="true"
        tools:counterMinLenght="6"
        tools:ignore="TextFields,autofill" />

    <EditText

        android:id="@+id/confirm_pass"
        android:animateLayoutChanges="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_field"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="5dp"
...
