...
        android:inputType="phone"
        android:visibility="invisible"
        android:padding="10dp"
        android:textColorHint="@color/black" />

    <Button
    android:id="@+id/sign_up"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/input_fields"
    android:text="Send code"
    android:layout_below="@id/SignupWithPhoneFragment_receivedCodeField"
    android:layout_centerHorizontal="true"
...
